FindBugs fixes
git-svn-id: https://fluid.surelogic.com/svn/eng/trunk/flashlight-instrumentation-5.0@71 d02ae147-ee12-4a35-9452-91c89e8b2592